fix(test): isolate ChatPanel coverage mocks per test