@@ -1,15 +1,15 @@
 package com.bajinho.continuebeans;
 
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.MockedConstruction;
+import org.mockito.MockedStatic;
 
 import javax.swing.JComboBox;
 import javax.swing.JButton;
 import javax.swing.JTextField;
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
+import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 
@@ -19,242 +19,241 @@ import static org.mockito.Mockito.*;
 /** Additional deterministic coverage for the canonical dark ChatPanel. */
 class ChatPanelCoverageGapTest {
 
-    private MockedConstruction<LlmClient> clients;
-    private MockedConstruction<com.bajinho.continuebeans.task.TaskOrchestrator> orchestrators;
-    private LlmClient client;
-    private com.bajinho.continuebeans.task.TaskOrchestrator orchestrator;
-    private ChatPanel panel;
-    private String originalApiUrl;
-    private String originalModel;
-
-    @BeforeEach
-    void setUp() {
-        originalApiUrl = ContinueSettings.getApiUrl();
-        originalModel = ContinueSettings.getModel();
-        ContinueSettings.setApiUrl("");
-        ContinueSettings.setModel("test-model");
-
-        clients = mockConstruction(LlmClient.class);
-        orchestrators = mockConstruction(com.bajinho.continuebeans.task.TaskOrchestrator.class);
-        panel = new ChatPanel();
-        client = clients.constructed().get(0);
-        orchestrator = orchestrators.constructed().get(0);
-    }
-
-    @AfterEach
-    void tearDown() {
-        try {
-            ContinueSettings.setApiUrl(originalApiUrl);
-            ContinueSettings.setModel(originalModel);
-        } finally {
-            if (orchestrators != null) {
-                orchestrators.close();
-            }
-            if (clients != null) {
-                clients.close();
-            }
-        }
-    }
-
     @Test
     void rejectsMissingApiUrl() throws Exception {
-        ContinueSettings.setApiUrl(null);
-        assertFalse((Boolean) invoke("hasConfiguredApiUrl"));
+        withPanel("http://mock/api", "test-model", (panel, settings, client, orchestrator) -> {
+            settings.when(ContinueSettings::getApiUrl).thenReturn(null);
+            assertFalse((Boolean) invoke(panel, "hasConfiguredApiUrl"));
 
-        ContinueSettings.setApiUrl("   ");
-        assertFalse((Boolean) invoke("hasConfiguredApiUrl"));
+            settings.when(ContinueSettings::getApiUrl).thenReturn("   ");
+            assertFalse((Boolean) invoke(panel, "hasConfiguredApiUrl"));
+        });
     }
 
     @Test
     void rejectsMalformedAndMissingSchemeApiUrls() throws Exception {
-        ContinueSettings.setApiUrl("not a url");
-        assertFalse((Boolean) invoke("hasConfiguredApiUrl"));
+        withPanel("http://mock/api", "test-model", (panel, settings, client, orchestrator) -> {
+            settings.when(ContinueSettings::getApiUrl).thenReturn("not a url");
+            assertFalse((Boolean) invoke(panel, "hasConfiguredApiUrl"));
 
-        ContinueSettings.setApiUrl("localhost:1234");
-        assertFalse((Boolean) invoke("hasConfiguredApiUrl"));
+            settings.when(ContinueSettings::getApiUrl).thenReturn("//localhost:1234");
+            assertFalse((Boolean) invoke(panel, "hasConfiguredApiUrl"));
+        });
     }
 
     @Test
     void acceptsValidConfiguredApiUrl() throws Exception {
-        ContinueSettings.setApiUrl("http://127.0.0.1:1234/v1/chat/completions");
-        assertTrue((Boolean) invoke("hasConfiguredApiUrl"));
+        withPanel("http://mock/api", "test-model", (panel, settings, client, orchestrator) -> {
+            settings.when(ContinueSettings::getApiUrl)
+                    .thenReturn("http://127.0.0.1:1234/v1/chat/completions");
+            assertTrue((Boolean) invoke(panel, "hasConfiguredApiUrl"));
+        });
     }
 
     @Test
     void containsItemCoversPresentAndAbsentValues() throws Exception {
-        JComboBox<String> selector = field("modeSelector", JComboBox.class);
-        assertTrue((Boolean) invoke("containsItem", "test-model"));
-        selector.addItem("second-model");
-        assertTrue((Boolean) invoke("containsItem", "second-model"));
-        assertFalse((Boolean) invoke("containsItem", "missing-model"));
+        withPanel("http://mock/api", "test-model", (panel, settings, client, orchestrator) -> {
+            JComboBox<String> selector = field(panel, "modeSelector", JComboBox.class);
+            assertTrue((Boolean) invoke(panel, "containsItem", "test-model"));
+            selector.addItem("second-model");
+            assertTrue((Boolean) invoke(panel, "containsItem", "second-model"));
+            assertFalse((Boolean) invoke(panel, "containsItem", "missing-model"));
+        });
     }
 
     @Test
     void selectedModelFallsBackToSettingsForPlaceholders() throws Exception {
-        JComboBox<String> selector = field("modeSelector", JComboBox.class);
+        withPanel("http://mock/api", "test-model", (panel, settings, client, orchestrator) -> {
+            JComboBox<String> selector = field(panel, "modeSelector", JComboBox.class);
 
-        selector.setSelectedItem(null);
-        ContinueSettings.setModel("fallback-model");
-        assertEquals("fallback-model", invoke("getSelectedModel"));
+            selector.setSelectedItem(null);
+            settings.when(ContinueSettings::getModel).thenReturn("fallback-model");
+            assertEquals("fallback-model", invoke(panel, "getSelectedModel"));
 
-        selector.removeAllItems();
-        selector.addItem("Loading models…");
-        assertEquals("fallback-model", invoke("getSelectedModel"));
+            selector.removeAllItems();
+            selector.addItem("Loading models…");
+            assertEquals("fallback-model", invoke(panel, "getSelectedModel"));
 
-        selector.removeAllItems();
-        selector.addItem("No models available");
-        assertEquals("fallback-model", invoke("getSelectedModel"));
+            selector.removeAllItems();
+            selector.addItem("No models available");
+            assertEquals("fallback-model", invoke(panel, "getSelectedModel"));
 
-        selector.removeAllItems();
-        selector.addItem("real-model");
-        assertEquals("real-model", invoke("getSelectedModel"));
+            selector.removeAllItems();
+            selector.addItem("real-model");
+            assertEquals("real-model", invoke(panel, "getSelectedModel"));
+        });
     }
 
     @Test
     void persistSelectedModelIgnoresPlaceholdersAndPersistsRealModels() throws Exception {
-        JComboBox<String> selector = field("modeSelector", JComboBox.class);
+        withPanel("http://mock/api", "test-model", (panel, settings, client, orchestrator) -> {
+            JComboBox<String> selector = field(panel, "modeSelector", JComboBox.class);
 
-        selector.removeAllItems();
-        selector.addItem("Loading models…");
-        selector.setSelectedItem("Loading models…");
-        invoke("persistSelectedModel");
-        assertEquals("test-model", ContinueSettings.getModel());
+            selector.removeAllItems();
+            selector.addItem("Loading models…");
+            selector.setSelectedItem("Loading models…");
+            invoke(panel, "persistSelectedModel");
+            settings.verify(() -> ContinueSettings.setModel("Loading models…"), never());
 
-        selector.removeAllItems();
-        selector.addItem("No models available");
-        selector.setSelectedItem("No models available");
-        invoke("persistSelectedModel");
-        assertEquals("test-model", ContinueSettings.getModel());
+            selector.removeAllItems();
+            selector.addItem("No models available");
+            selector.setSelectedItem("No models available");
+            invoke(panel, "persistSelectedModel");
+            settings.verify(() -> ContinueSettings.setModel("No models available"), never());
 
-        selector.removeAllItems();
-        selector.addItem("production-model");
-        selector.setSelectedItem("production-model");
-        invoke("persistSelectedModel");
-        assertEquals("production-model", ContinueSettings.getModel());
+            selector.removeAllItems();
+            selector.addItem("production-model");
+            selector.setSelectedItem("production-model");
+            invoke(panel, "persistSelectedModel");
+            settings.verify(() -> ContinueSettings.setModel("production-model"));
+        });
     }
 
     @Test
     void sendAvailabilityTracksTextAndProcessingState() throws Exception {
-        JTextField input = field("promptInput", JTextField.class);
-        JButton send = field("sendButton", JButton.class);
+        withPanel("http://mock/api", "test-model", (panel, settings, client, orchestrator) -> {
+            JTextField input = field(panel, "promptInput", JTextField.class);
+            JButton send = field(panel, "sendButton", JButton.class);
 
-        input.setText("");
-        invoke("updateSendAvailability");
-        assertFalse(send.isEnabled());
+            input.setText("");
+            invoke(panel, "updateSendAvailability");
+            assertFalse(send.isEnabled());
 
-        input.setText("hello");
-        invoke("updateSendAvailability");
-        assertTrue(send.isEnabled());
+            input.setText("hello");
+            invoke(panel, "updateSendAvailability");
+            assertTrue(send.isEnabled());
 
-        setField("isProcessing", true);
-        invoke("updateSendAvailability");
-        assertFalse(send.isEnabled());
+            setField(panel, "isProcessing", true);
+            invoke(panel, "updateSendAvailability");
+            assertFalse(send.isEnabled());
+        });
     }
 
     @Test
     void sendPromptStopsOnEmptyInput() throws Exception {
-        JTextField input = field("promptInput", JTextField.class);
-        input.setText("   ");
-        invoke("sendPrompt");
-        verifyNoInteractions(orchestrator);
+        withPanel("http://mock/api", "test-model", (panel, settings, client, orchestrator) -> {
+            JTextField input = field(panel, "promptInput", JTextField.class);
+            input.setText("   ");
+            invoke(panel, "sendPrompt");
+            verifyNoInteractions(orchestrator);
+        });
     }
 
     @Test
     void sendPromptRequiresModel() throws Exception {
-        ContinueSettings.setModel("");
-        JComboBox<String> selector = field("modeSelector", JComboBox.class);
-        selector.removeAllItems();
-        selector.addItem("No models available");
-        JTextField input = field("promptInput", JTextField.class);
-        input.setText("do something");
+        withPanel("http://mock/api", "", (panel, settings, client, orchestrator) -> {
+            JComboBox<String> selector = field(panel, "modeSelector", JComboBox.class);
+            selector.removeAllItems();
+            selector.addItem("No models available");
+            JTextField input = field(panel, "promptInput", JTextField.class);
+            input.setText("do something");
 
-        invoke("sendPrompt");
+            invoke(panel, "sendPrompt");
 
-        assertFalse((Boolean) getField("isProcessing"));
-        verifyNoInteractions(orchestrator);
+            assertFalse((Boolean) getField(panel, "isProcessing"));
+            verifyNoInteractions(orchestrator);
+        });
     }
 
     @Test
     void refreshModelsHandlesSuccessfulModelList() throws Exception {
-        ContinueSettings.setApiUrl("http://mock/api");
-        ContinueSettings.setModel("preferred-model");
-        when(client.getModelosDisponiveisAsync())
-                .thenReturn(CompletableFuture.completedFuture(List.of("alpha", "preferred-model", " ", null)));
+        withPanel("http://mock/api", "preferred-model", (panel, settings, client, orchestrator) -> {
+            when(client.getModelosDisponiveisAsync())
+                    .thenReturn(CompletableFuture.completedFuture(
+                            Arrays.asList("alpha", "preferred-model", " ", null)));
 
-        invoke("refreshModels");
-        flushEdt();
+            invoke(panel, "refreshModels");
+            flushEdt();
 
-        JComboBox<String> selector = field("modeSelector", JComboBox.class);
-        assertEquals(2, selector.getItemCount());
-        assertEquals("preferred-model", selector.getSelectedItem());
+            JComboBox<String> selector = field(panel, "modeSelector", JComboBox.class);
+            assertEquals(2, selector.getItemCount());
+            assertEquals("preferred-model", selector.getSelectedItem());
+            settings.verify(() -> ContinueSettings.setModel(anyString()), never());
+        });
     }
 
     @Test
     void refreshModelsHandlesEmptyResultWithSelectedModel() throws Exception {
-        ContinueSettings.setApiUrl("http://mock/api");
-        ContinueSettings.setModel("saved-model");
-        when(client.getModelosDisponiveisAsync())
-                .thenReturn(CompletableFuture.completedFuture(List.of()));
+        withPanel("http://mock/api", "saved-model", (panel, settings, client, orchestrator) -> {
+            when(client.getModelosDisponiveisAsync())
+                    .thenReturn(CompletableFuture.completedFuture(List.of()));
 
-        invoke("refreshModels");
-        flushEdt();
+            invoke(panel, "refreshModels");
+            flushEdt();
 
-        JComboBox<String> selector = field("modeSelector", JComboBox.class);
-        assertEquals(1, selector.getItemCount());
-        assertEquals("saved-model", selector.getSelectedItem());
+            JComboBox<String> selector = field(panel, "modeSelector", JComboBox.class);
+            assertEquals(1, selector.getItemCount());
+            assertEquals("saved-model", selector.getSelectedItem());
+        });
     }
 
     @Test
     void refreshModelsHandlesEmptyResultWithoutSelectedModel() throws Exception {
-        ContinueSettings.setApiUrl("http://mock/api");
-        ContinueSettings.setModel("");
-        when(client.getModelosDisponiveisAsync())
-                .thenReturn(CompletableFuture.completedFuture(List.of()));
+        withPanel("http://mock/api", "", (panel, settings, client, orchestrator) -> {
+            when(client.getModelosDisponiveisAsync())
+                    .thenReturn(CompletableFuture.completedFuture(List.of()));
 
-        invoke("refreshModels");
-        flushEdt();
+            invoke(panel, "refreshModels");
+            flushEdt();
 
-        JComboBox<String> selector = field("modeSelector", JComboBox.class);
-        assertEquals(1, selector.getItemCount());
-        assertEquals("No models available", selector.getSelectedItem());
+            JComboBox<String> selector = field(panel, "modeSelector", JComboBox.class);
+            assertEquals(1, selector.getItemCount());
+            assertEquals("No models available", selector.getSelectedItem());
+        });
     }
 
     @Test
     void refreshModelsHandlesProviderFailure() throws Exception {
-        ContinueSettings.setApiUrl("http://mock/api");
-        ContinueSettings.setModel("saved-model");
-        when(client.getModelosDisponiveisAsync())
-                .thenReturn(CompletableFuture.failedFuture(new IllegalStateException("offline")));
+        withPanel("http://mock/api", "saved-model", (panel, settings, client, orchestrator) -> {
+            when(client.getModelosDisponiveisAsync())
+                    .thenReturn(CompletableFuture.failedFuture(new IllegalStateException("offline")));
 
-        invoke("refreshModels");
-        flushEdt();
+            invoke(panel, "refreshModels");
+            flushEdt();
 
-        JComboBox<String> selector = field("modeSelector", JComboBox.class);
-        assertEquals("saved-model", selector.getSelectedItem());
+            JComboBox<String> selector = field(panel, "modeSelector", JComboBox.class);
+            assertEquals("saved-model", selector.getSelectedItem());
+        });
     }
 
     @Test
     void sendPromptWithMockedOrchestratorStartsProcessing() throws Exception {
-        ContinueSettings.setModel("test-model");
-        JComboBox<String> selector = field("modeSelector", JComboBox.class);
-        selector.removeAllItems();
-        selector.addItem("test-model");
-        selector.setSelectedItem("test-model");
-        JTextField input = field("promptInput", JTextField.class);
-        input.setText("corrija o pom.xml");
+        withPanel("http://mock/api", "test-model", (panel, settings, client, orchestrator) -> {
+            JComboBox<String> selector = field(panel, "modeSelector", JComboBox.class);
+            selector.removeAllItems();
+            selector.addItem("test-model");
+            selector.setSelectedItem("test-model");
+            JTextField input = field(panel, "promptInput", JTextField.class);
+            input.setText("corrija o pom.xml");
 
-        when(orchestrator.executeGoal(anyString(), anyString(), any()))
-                .thenReturn(CompletableFuture.completedFuture(null));
+            when(orchestrator.executeGoal(anyString(), anyString(), any()))
+                    .thenReturn(CompletableFuture.completedFuture(null));
 
-        invoke("sendPrompt");
+            invoke(panel, "sendPrompt");
 
-        assertTrue((Boolean) getField("isProcessing"));
-        assertFalse(input.isEnabled());
-        assertFalse(selector.isEnabled());
-        verify(orchestrator).executeGoal(eq("corrija o pom.xml"), eq("lmstudio"), any());
+            assertTrue((Boolean) getField(panel, "isProcessing"));
+            assertFalse(input.isEnabled());
+            assertFalse(selector.isEnabled());
+            verify(orchestrator).executeGoal(eq("corrija o pom.xml"), eq("lmstudio"), any());
+        });
     }
 
-    private Object invoke(String name, Object... args) throws Exception {
+    private static void withPanel(String apiUrl, String model, TestBody body) throws Exception {
+        try (MockedStatic<ContinueSettings> settings = mockStatic(ContinueSettings.class);
+             MockedConstruction<LlmClient> clients = mockConstruction(LlmClient.class);
+             MockedConstruction<com.bajinho.continuebeans.task.TaskOrchestrator> orchestrators =
+                     mockConstruction(com.bajinho.continuebeans.task.TaskOrchestrator.class)) {
+            settings.when(ContinueSettings::getApiUrl).thenReturn(apiUrl);
+            settings.when(ContinueSettings::getModel).thenReturn(model);
+            ChatPanel panel = new ChatPanel();
+            LlmClient client = clients.constructed().get(0);
+            com.bajinho.continuebeans.task.TaskOrchestrator orchestrator =
+                    orchestrators.constructed().get(0);
+            body.run(panel, settings, client, orchestrator);
+        }
+    }
+
+    private static Object invoke(ChatPanel panel, String name, Object... args) throws Exception {
         Method target = null;
         for (Method method : ChatPanel.class.getDeclaredMethods()) {
             if (method.getName().equals(name) && method.getParameterCount() == args.length) {
@@ -268,17 +267,17 @@ class ChatPanelCoverageGapTest {
     }
 
     @SuppressWarnings("unchecked")
-    private <T> T field(String name, Class<T> type) throws Exception {
-        return (T) getField(name);
+    private static <T> T field(ChatPanel panel, String name, Class<T> type) throws Exception {
+        return (T) getField(panel, name);
     }
 
-    private Object getField(String name) throws Exception {
+    private static Object getField(ChatPanel panel, String name) throws Exception {
         Field field = ChatPanel.class.getDeclaredField(name);
         field.setAccessible(true);
         return field.get(panel);
     }
 
-    private void setField(String name, Object value) throws Exception {
+    private static void setField(ChatPanel panel, String name, Object value) throws Exception {
         Field field = ChatPanel.class.getDeclaredField(name);
         field.setAccessible(true);
         field.set(panel, value);
@@ -286,5 +285,12 @@ class ChatPanelCoverageGapTest {
 
     private static void flushEdt() throws Exception {
         javax.swing.SwingUtilities.invokeAndWait(() -> { });
+    }
+
+    @FunctionalInterface
+    private interface TestBody {
+        void run(ChatPanel panel, MockedStatic<ContinueSettings> settings,
+                 LlmClient client,
+                 com.bajinho.continuebeans.task.TaskOrchestrator orchestrator) throws Exception;
     }
 }
